final and not adaptive Olivio layout

--- a/Olivio/index.html
+++ b/Olivio/index.html
@@ -93,7 +93,21 @@
         <div class="container">
             <div class="our-product__inner">
                 <div class="our-product_left-side">
-                    <img src="src/Image.png" alt="">
+                    <div class="left-side__inner">
+                        <img src="src/Image.png" alt="">
+                        <div class="left-side_customized-for lato">
+                            <h2>Customized For</h2>
+                            <div class="line"></div>
+                            <img src="src/Image.png" alt="">
+                            <h2 class="person_name">Mikayla</h2>
+                            <ul>
+                                <h1>Your custom contents</h1>
+                                <li>Understand Your Stress</li>
+                                <li>Anger Management</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="our-product_right-side lato">
                     <h2>Our product</h2>
@@ -103,6 +117,19 @@
                     </div>
                     <button class="btn-primary">find your way</button>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <ul class="lato">
+                    <h2>alivio</h2>
+                    <li>why alivio</li>
+                    <li>solutions</li>
+                    <li>community</li>
+                    <li>pricing</li>
+                </ul>
             </div>
         </div>
     </div>
